Initial information to be displayed in templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> {% block title %} The Best Collections Ever Met {% endblock %} | Collectors</title>
+    <title> {% block title %} The Best Parking System {% endblock %} | Parking</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
     <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
@@ -16,7 +16,7 @@
 
 <main>
     <div class="container">
-        <h1>{% block header %}The Best Collections Ever Met{% endblock %}</h1>
+        <h1>{% block header %} The Best Parking System {% endblock %}</h1>
 
         {% block content %}
         {% endblock %}
