--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light" style="background-color:LightGray;">
-    <a class="navbar-brand" href="{% url 'parking_systems:index' %}"><span style="color:red"><strong>Col</span>lectors&#128151;</strong>
+    <a class="navbar-brand" href="{% url 'parking_systems:index' %}"><span style="color:red"><strong>Par</span>king</strong>
     </a>
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
