--- a/templates/parking_systems/index.html
+++ b/templates/parking_systems/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block header %}<div class="w3-container w3-green"><strong>Лучшие коллекции со всего мира!</strong></div>{% endblock %}
+{% block header %}
+<div class="w3-container w3-green"><strong>Лучшие система для бронирования парковочных мест! </strong>
+</div>{% endblock %}
 {% block content %}
-        <div class="container">
-            {% include "includes/menu.html" with index=True %}
-        </div>
+<div class="container">
+</div>
 {% endblock %}
