--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-light" style="background-color:LightGray;">
-    <a class="navbar-brand" href="{% url 'parking_systems:index' %}"><span style="color:red"><strong>Par</span>king</strong>
+    <a class="navbar-brand" href="{% url 'parking_systems:index' %}"><span
+            style="color:red"><strong>Par</span>king</strong>
     </a>
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
-            <a class="p-2 text-dark" href="{% url 'password_change' %}"><strong>Изменить пароль</strong></a>
-            <a class="p-2 text-dark" href="{% url 'logout' %}"><strong>Выйти</strong></a>
+        <a class="p-2 text-dark" href="{% url 'logout' %}"><strong>Выйти</strong></a>
         {% else %}
-            <a class="p-2 text-dark" href="{% url 'login' %}"><strong>Войти</strong></a> |
-            <a class="p-2 text-dark" href="{% url 'users:signup' %}"><strong>Регистрация</strong></a>
+        <a class="p-2 text-dark" href="{% url 'login' %}"><strong>Войти</strong></a> |
+        <a class="p-2 text-dark" href="{% url 'users:signup' %}"><strong>Регистрация</strong></a>
         {% endif %}
     </nav>
 </nav>
