--- a/templates/parking_systems/index.html
+++ b/templates/parking_systems/index.html
@@ -8,6 +8,8 @@
     {% for slot in parking_slots %}
     <p><strong>{{ slot }}</strong></p>
     {% endfor %}
+    <a href="{% url 'parking_systems:booking' %}"
+               class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Забронировать</a>
     {% endif %}
 </div>
 {% endblock %}
