--- a/templates/parking_systems/reservation.html
+++ b/templates/parking_systems/reservation.html
@@ -15,5 +15,7 @@
                class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Создать новое бронирование</a>
         <a href="{% url 'parking_systems:update_reservation' reservation.id %}"
                class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Редактировать бронирование</a>
+        <a href="{% url 'parking_systems:delete_reservation' reservation.id %}"
+               class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Удалить бронирование</a>
 {% endblock %}
 </div>
