Creating lists of reservation for every parking slot

--- a/templates/parking_systems/index.html
+++ b/templates/parking_systems/index.html
@@ -6,7 +6,7 @@
 <div class="container">
     {% if user.is_authenticated %}
     {% for slot in parking_slots %}
-    <div><p><strong>{{ slot }}</strong></p>
+    <div><p><strong><a class="p-2 text-dark" href="{% url 'parking_systems:parking_reservations' slot.id %}">{{ slot }}</strong></p>
         <a href="{% url 'parking_systems:delete_parking_slot' slot.id %}"
            class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Удалить парковочное место</a>
     </div>
