--- a/templates/parking_systems/reservations.html
+++ b/templates/parking_systems/reservations.html
@@ -3,6 +3,12 @@
 {% block header %}Все бронирования парковочного места{% endblock %}
 {% block content %}
 <div class="container">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'parking_systems:index' %}">Парковочные места</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Бронирования</li>
+        </ol>
+    </nav>
     {% for reservation in reservations %}
     <p> <strong><a class="p-2 text-dark" href="{% url 'parking_systems:reservation' reservation.id %}"><strong>{{ reservation }}</strong></a></strong> </p>
     {% if not forloop.last %}
