--- a/templates/parking_systems/reservations.html
+++ b/templates/parking_systems/reservations.html
@@ -9,11 +9,13 @@
             <li class="breadcrumb-item active" aria-current="page">Бронирования</li>
         </ol>
     </nav>
-    {% for reservation in reservations %}
+    {% for reservation in page %}
     <p> <strong><a class="p-2 text-dark" href="{% url 'parking_systems:reservation' reservation.id %}"><strong>{{ reservation }}</strong></a></strong> </p>
     {% if not forloop.last %}
     {% endif %}
     {% endfor %}
-
+{% if page.has_other_pages %}
+{% include "includes/paginator.html" with items=page paginator=paginator%}
+{% endif %}
 </div>
 {% endblock %}
