--- a/templates/parking_systems/reservation.html
+++ b/templates/parking_systems/reservation.html
@@ -2,6 +2,7 @@
 {% block title %} Бронирование {{ collection.name }} {% endblock %}
 {% block header %} {{ reservation }}{% endblock %}
 {% block content %}
+{% load parking_system_filters %}
     <div class="container">
         <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -12,7 +13,7 @@
             </ol>
         </nav>
         <p> Вы забронировали парковочное место № {{ reservation.parking_space.id }}. Период бронирования составит
-            {{ period }}. </p>
+            {{ period|timedelta_filter }} </p>
         <hr>
         <a href="{% url 'parking_systems:booking' %}"
            class="btn btn-outline-secondary btn-sm" role="button" aria-pressed="true">Создать новое бронирование</a>
