Changes in color style in nav and footer templates

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
-    <p class="m-0 text-dark text-center "><strong> Сайт для бронирования парковочных мест <span style="color:red">Par</span>king</strong> © {% now 'Y' %}, все
+    <p class="m-0 text-dark text-center "><strong> Сайт для бронирования парковочных мест <span style="color:navajowhite">Par</span>king</strong> © {% now 'Y' %}, все
         права защищены.</p>
 </footer>
