Fixing html design

--- a/templates/includes/delete_parking.html
+++ b/templates/includes/delete_parking.html
@@ -4,5 +4,5 @@
    {% csrf_token %}
      <h1>Вы уверены, что хотите удалить парковочное место?</h1><br>
      <input class="btn btn-danger" type="submit" value="Да" />
-     <a href="{% url 'parking_systems:index'%}"><div class="btn btn-primary">Отменить</div></a>
+     <a href="{% url 'parking_systems:index'%}"><div class="btn btn-secondary">Отменить</div></a>
 </form>
