--- a/templates/parking_systems/booking.html
+++ b/templates/parking_systems/booking.html
@@ -24,13 +24,11 @@
                         action="{% url 'parking_systems:booking' %}"
                         {% endif %}
                 >
-                    <table>
                         {% for error in form.non_field_errors %}
                         <div class="alert alert-danger" role="alert">
                             {{ error }}
                         </div>
                         {% endfor %}
-                    </table>
                     {% csrf_token %}
 
 
@@ -48,14 +46,14 @@
                         </div>
                     </div>
                     {% endfor %}
-                    <div class="card">
 
-                        <button type="submit" class="btn btn-outline-dark">
-                            Сохранить
-                        </button>
-                        <a class="btn btn-outline-dark"
-                           href="{% url 'parking_systems:index' %}">Отменить</a>
-                    </div>
+<div class="text-right">
+                    <button type="submit" class="btn btn-primary">
+                        Сохранить
+                    </button>
+                    <a class="btn btn-secondary"
+                       href="{% url 'parking_systems:index' %}">Отменить</a>
+</div>
                 </form>
             </div>
         </div>
