--- a/templates/parking_systems/index.html
+++ b/templates/parking_systems/index.html
@@ -10,17 +10,41 @@
         </ol>
     </nav>
     {% if user.is_authenticated %}
-
     {% for slot in parking_slots %}
     <div class="p-2">
         <a class="py-2 text-dark" href="{% url 'parking_systems:parking_reservations' slot.id %}">{{ slot }}</a>
         {% if perms.parking_systems.delete_parking %}
-        <a href="{% url 'parking_systems:delete_parking_slot' slot.id %}"
-           class="btn btn-danger btn-sm" role="button" aria-pressed="true">Удалить</a>
+        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#confirmModal{{ slot.id }}">
+            Удалить
+        </button>
+        <div class="modal fade" id="confirmModal{{ slot.id }}" tabindex="-1" aria-labelledby="confirmModalLabel{{ slot.id }}" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="confirmModalLabel{{ slot.id }}">Подтверждение удаления</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Вы уверены, что хотите удалить парковочное место?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                        <form method="post" action="{% url 'parking_systems:delete_parking_slot' slot.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger" data-toggle="modal"
+                                    data-target="#confirmModal{{ slot.id }}">
+                                Удалить
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         {% endif %}
     </div>
     {% endfor %}
-
 
     <div class="text-right">
         <a href="{% url 'parking_systems:booking' %}"
