--- a/templates/parking_systems/booking.html
+++ b/templates/parking_systems/booking.html
@@ -41,8 +41,7 @@
                             aria-required="{% if field.field.required %}true{% else %}false{% endif %}"
                     >
                         <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">
-                            {{ field.label }}{% if field.field.required %}
-                            <span class="required">*</span>{% endif %}
+                            {{ field.label }}{% if field.field.required %}&nbsp;*{% endif %}
                         </label>
                         <div class="col-md-6">
                             {{ field|addclass:"form-control" }}
